# gst-plugins-rs

./: Cargo.toml
audio/spotify/: Cargo.toml  README.md
audio/spotify/src/: common.rs
audio/spotify/src/spotifyaudiosrc/: imp.rs  mod.rs
docs/plugins/: gst_plugins_cache.json
