[package]
name = "gst-plugin-spotify"
version.workspace = true
authors = ["Guillaume Desmottes <guillaume@desmottes.be>"]
repository.workspace = true
license = "MPL-2.0"
description = "GStreamer Spotify Plugin"
edition.workspace = true
rust-version.workspace = true

[dependencies]
gst.workspace = true
gst-base.workspace = true
librespot-core = { git = "https://github.com/librespot-org/librespot.git", rev = "78ce118d32912adfb2705481f69c83df6a88211f" }
librespot-metadata = { git = "https://github.com/librespot-org/librespot.git", rev = "78ce118d32912adfb2705481f69c83df6a88211f" }
librespot-playback = { git = "https://github.com/librespot-org/librespot.git", rev = "78ce118d32912adfb2705481f69c83df6a88211f", features = ['passthrough-decoder'] }
log = "0.4"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
futures = "0.3"
anyhow = "1.0"
url = "2.3"
env_filter = "0.1"

[lib]
name = "gstspotify"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper.workspace = true

[features]
static = []
capi = []
doc = ["gst/v1_18"]

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
